# jupyter-client

./: .gitignore  README.md  eslint.config.mjs  install.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
cs3_jupyter_client/: __init__.py  cs3largefilemanager.py  cs3mixin.py  filecheckpoints.py  fileio.py  filemanager.py  upstreamfilemanager.py  upstreamlargefilemanager.py
cs3_jupyter_client/cs3fs/: cs3fs.py  statuscodehandler.py
cs3_jupyter_client/server_extension/: __init__.py  sharing.py
jupyter-config/server-config/: cs3_jupyter_client.json
src/: icons.ts  index.ts  shares-widget.ts  spaces-widget.ts
