[build-system]
requires = ["hatchling>=1.28.0"]
build-backend = "hatchling.build"

[project]
name = "cs3_jupyter_client"
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "jupyter_server>=2.0.1,<3",
    "cs3client==1.6.0",
    "cs3apis==0.2.20260130.3789864",
    "protobuf==6.33.5",
]

[tool.hatch.build.targets.wheel]
packages = ["cs3_jupyter_client"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[dependency-groups]
dev = ["sphinx==9.1.0"]
