[build-system]
requires = ["hatchling==1.28.0", "hatch-nodejs-version==0.4.0", "jupyterlab>=4.5.0,<5"]
build-backend = "hatchling.build"

[project]
name = "cs3_jupyter_client"
version = "0.1.0"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "jupyter_server>=2.0.1,<3",
    "cs3client==1.6.0",
    "protobuf==6.33.5",
]

[dependency-groups]
dev = [
    "ruff==0.15.1",
    "sphinx==7.4.7",
]

[tool.hatch.build.targets.wheel]
packages = ["cs3_jupyter_client"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
"cs3_jupyter_client/labextension" = "share/jupyter/labextensions/@cs3org/cs3-jupyter-client"
"install.json" = "share/jupyter/labextensions/@cs3org/cs3-jupyter-client/install.json"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder==0.9.1"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "cs3_jupyter_client/labextension/static/style.js",
    "cs3_jupyter_client/labextension/package.json",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "cs3_jupyter_client/labextension"

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "E", # pycodestyle (errors)
    "W", # pycodestyle (warnings)
    "F", # pyflakes
]
extend-ignore = [
    "E501", # line too long
]
